methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:66: error: not found: value numCarré
  numCarré = numCarré + 1
  ^